Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Oct-2010 Jean-Marie Simonet
 # [#22755] Backend module menu assignment improvements and fixes. Thanks Dennis.
 
11-Oct-2010 Mark Dexter
# [#22819] Clean up errors in new ACL UI

11-Oct-2010 Christophe Demko
 # Fix language filter plugin for routing
 # [#22038] PHP information (Dennis Hermacki)
 # [#22813] Installation language file - missing entry for STEPS (Serge Litvinov)

10-Oct-2010 Mark Dexter
# Fix invalid lft,rgt values in jos_menus in sample data

10-Oct-2010 Christophe Demko
 # [#22794] XML self closing tag syntax used on li in com_media (Rouven Weßling)

9-Oct-2010 Christophe Demko
 # [#22057] [patch] Broken unit tests for some form fields (Artyom Bisyarin)
 # [#21644] [patch] Unable to get group of a form field (Artyom Bisyarin)
 # [#22770] System - Language filter plugin is buggy if the link is comes from the home page menu
 # [#22769] Some language filtering missing
 # [#22777] Module breadcrumbs does not deal correctly with language filter plugin
 # [#22557] Remove all occurrences name attribute on the a element (Rouven Weßling, Andrea Tarr)
 # [#22168] patch for [#21804] "Your Profile" has too narrow a focus (Tomasz Narloch)
 # [#21804] "Your Profile" has too narrow a focus (Mathavan Jeyadev, Boris Baddenoff)
 # [#22555] Use Joomla.submitbutton() instead of submitbutton() (Rouven Weßling)
 # [#22775] Router does not redirect correctly
 # [#22621] Boolean validation in JForm (Rune Sjøen)
 # [#22775] Router does not redirect correctly (removing accidently one line)

8-Oct-2010 Christophe Demko
 # [#22759] Add version, date, author to Hathor (from Tracker # 22482) (thanks Andrea Tarr)
 # [#22734] Add Hathor support for tracker #21614 (thanks Andrea Tarr, Ole Bang Ottosen, bill richardson)